[gd_scene load_steps=8 format=2]

[ext_resource path="res://Juego/UI/MiniMapa/minimapa2.png" type="Texture" id=1]
[ext_resource path="res://Juego/UI/MiniMapa/iconos/player_icon.png" type="Texture" id=2]
[ext_resource path="res://Juego/UI/MiniMapa/MiniMapa.gd" type="Script" id=3]
[ext_resource path="res://Juego/UI/MiniMapa/iconos/base_enemiga_icon_C.png" type="Texture" id=4]
[ext_resource path="res://Juego/UI/MiniMapa/iconos/estacion_recarga_icon.png" type="Texture" id=5]
[ext_resource path="res://Juego/UI/MiniMapa/iconos/rele_masa_icon.png" type="Texture" id=6]
[ext_resource path="res://Juego/UI/MiniMapa/iconos/interceptor_icon.png" type="Texture" id=7]

[node name="MiniMapa" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -159.0
margin_top = -185.0
margin_right = 159.0
margin_bottom = -9.0
rect_min_size = Vector2( 318, 176 )
script = ExtResource( 3 )

[node name="CuadroMiniMapa" type="NinePatchRect" parent="."]
margin_right = 318.0
margin_bottom = 176.0
texture = ExtResource( 1 )

[node name="ContenedorIconos" type="MarginContainer" parent="CuadroMiniMapa"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0

[node name="ZonaRenderizadoMinimap" type="TextureRect" parent="CuadroMiniMapa/ContenedorIconos"]
margin_right = 314.0
margin_bottom = 172.0

[node name="IconoPlayer" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMinimap"]
position = Vector2( 159, 88 )
rotation = 1.5708
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="IconBaseEnemiga" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMinimap"]
visible = false
modulate = Color( 1, 0.0117647, 0.0117647, 1 )
position = Vector2( 209, 135 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="IconEstacionRecarga" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMinimap"]
visible = false
modulate = Color( 1, 0, 0.984314, 1 )
position = Vector2( 55, 82 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 5 )

[node name="IconoRele" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMinimap"]
visible = false
modulate = Color( 0, 0.952941, 1, 1 )
position = Vector2( 129, 127 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="IconoInterceptor" type="Sprite" parent="CuadroMiniMapa/ContenedorIconos/ZonaRenderizadoMinimap"]
visible = false
modulate = Color( 1, 0.654902, 0, 1 )
position = Vector2( 95, 87 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="TweenVisibilidad" type="Tween" parent="."]

[node name="TimerVisibilidad" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="TimerVisibilidad" to="." method="_on_TimerVisibilidad_timeout"]
